objects/Dados_complementares_de_distribuidor__c.object
<CustomObject>
    <fields>
        <fullName>Abrang_ncia_estados_cidades_bairros__c</fullName>
        <label>Abrangência (estados, cidades, bairros)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Area_de_armazenagem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Área de armazenagem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bacardi_Distribui__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bacardi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bacardi_N_SKUs__c</fullName>
        <label>Bacardi - Nº SKUs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bacardi_Part_Fat_perc__c</fullName>
        <label>Bacardi - Partic.faturamento (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Campari_Distribui__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campari</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campari_N_SKUs__c</fullName>
        <label>Campari - Nº SKUs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campari_Part_Fat_perc__c</fullName>
        <label>Campari - Partic.faturamento (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Carteira_Total_de_Clientes__c</fullName>
        <label>Carteira Total de Clientes</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cervejas_Distribui__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cervejas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cervejas_N_SKUs__c</fullName>
        <label>Cervejas - Nº SKUs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cervejas_Part_Fat_perc__c</fullName>
        <label>Cervejas - Partic.faturamento (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cliente__c</fullName>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dados complementares de distribuidores</relationshipLabel>
        <relationshipName>Dados_complementares_de_distribuidores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Clientes_PRB__c</fullName>
        <label>Clientes PRB</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diageo_Distribui__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diageo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diageo_N_SKUs__c</fullName>
        <label>Diageo - Nº SKUs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diageo_Part_Fat_perc__c</fullName>
        <label>Diageo - Partic.faturamento (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Emp_1__c</fullName>
        <label>Empresa 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emp_2__c</fullName>
        <label>Empresa 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emp_3__c</fullName>
        <label>Empresa 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energ_Distribui__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Energéticos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Energ_N_SKUs__c</fullName>
        <label>Energéticos - Nº SKUs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Energ_Part_Fat_perc__c</fullName>
        <label>Energéticos - Partic.faturamento (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exclusividade__c</fullName>
        <label>Exclusividade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trabalha com concorrentes para o mesmo tipo de produto</fullName>
                </value>
                <value>
                    <fullName>Exclusividade PRB nas categorias</fullName>
                </value>
                <value>
                    <fullName>Trabalha com concorrentes diretos PRB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Faz_entrega_noturna__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Faz entrega noturna?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Faz_matinal_semanal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Faz matinal semanal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Faz_troca_de_mercadorias__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Faz troca de mercadorias?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forma_Balcao__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forma - Balcão</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forma_Pornta_entrega__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forma - Pornta entrega</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forma_Pos_venda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forma - Pós-venda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forma_Pre_venda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forma - Pré-venda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frota_propria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Frota própria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instalacao_Deposito_Propria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Instalação Depósito Própria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instalacao_Escritorio_Propria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Instalação Escritório Própria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Media_de_cli_posit_mensal__c</fullName>
        <label>Média de clientes positiv.mensalmente</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merchandising__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merchandising</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Muller_Distribui__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Muller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Muller_N_SKUs__c</fullName>
        <label>Muller - Nº SKUs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Muller_Part_Fat_perc__c</fullName>
        <label>Muller - Partic.faturamento (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>N_Gerente_de_vendas__c</fullName>
        <label>Nº Gerente de vendas</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Gerentes__c</fullName>
        <label>Nº Gerentes</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Merchandisers__c</fullName>
        <label>Nº Merchandisers</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Promotores__c</fullName>
        <label>Nº Promotores</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Supervisor_de_vendas__c</fullName>
        <label>Nº Supervisor de vendas</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Supervisores__c</fullName>
        <label>Nº Supervisores</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Total_de_Colaboradores__c</fullName>
        <label>Nº Total de Colaboradores</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Vendedores_Externos_Total__c</fullName>
        <label>Nº Vendedores Externos (Total)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Vendedores_Externos_que_vendem_PRB__c</fullName>
        <label>Nº Vendedores Externos (que vendem PRB)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Vendedores_Internos_Total__c</fullName>
        <label>Nº Vendedores Internos (Total)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Vendedores_Internos_que_vendem_PRB__c</fullName>
        <label>Nº Vendedores Internos (que vendem PRB)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Vendedores__c</fullName>
        <label>Nº Vendedores</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_skus_Emp_1__c</fullName>
        <label>Nº skus Empresa 1</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_skus_Emp_2__c</fullName>
        <label>Nº skus Empresa 2</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_skus_Emp_3__c</fullName>
        <label>Nº skus Empresa 3</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Off_Trade_AS_10__c</fullName>
        <label>Off Trade - AS 10 + CK</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Off_Trade_AS_1_a_4_CK__c</fullName>
        <label>Off Trade - AS 1 a 4 CK</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Off_Trade_AS_5_a_9_CK__c</fullName>
        <label>Off Trade - AS 5 a 9 CK</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Off_Trade_Academias__c</fullName>
        <label>Off Trade - Academias</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Off_Trade_Conveniencia__c</fullName>
        <label>Off Trade - Conveniência</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Off_Trade_Drogarias__c</fullName>
        <label>Off Trade - Drogarias</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Off_Trade_Outros_Atac_Distr__c</fullName>
        <label>Off Trade - Outros Atacados/Distrib.</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Off_Trade_Padaria__c</fullName>
        <label>Off Trade - Padaria</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Trade_Bar_Especial__c</fullName>
        <label>On Trade - Bar Especial</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Trade_Bar_Popular__c</fullName>
        <label>On Trade - Bar Popular</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Trade_Boates__c</fullName>
        <label>On Trade - Boates</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Trade_Hotel_Motel__c</fullName>
        <label>On Trade - Hotel/ Motel</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Trade_Outros__c</fullName>
        <label>On Trade - Outros</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Trade_Quiosque__c</fullName>
        <label>On Trade - Quiosque</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Trade_Restaurantes__c</fullName>
        <label>On Trade - Restaurantes</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Trade_Table_Dance__c</fullName>
        <label>On Trade - Table Dance</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outros_Distribui__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outros</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outros_N_SKUs__c</fullName>
        <label>Outros - Nº SKUs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outros_Part_Fat_perc__c</fullName>
        <label>Outros - Partic.faturamento (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Outros__c</fullName>
        <label>Outros</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_do_Fat_Emp_1__c</fullName>
        <label>% do Faturamento Empresa 1</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_do_Fat_Emp_2__c</fullName>
        <label>% do Faturamento Empresa 2</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_do_Fat_Emp_3__c</fullName>
        <label>% do Faturamento Empresa 3</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pernod_Distribui__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pernod Ricard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pernod_N_SKUs__c</fullName>
        <label>Pernod Ricard - Nº SKUs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pernod_Part_Fat_perc__c</fullName>
        <label>Pernod Ricard - Partic.faturamento (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pos_venda_oferece__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pós venda - oferece</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Possui_quadro_de_metas_por_vendedor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Possui quadro de metas por vendedor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Possui_vendedor_dedicado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Possui vendedor dedicado?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prazo_de_entrega_dias__c</fullName>
        <label>Prazo de entrega (dias)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantidade_da_frota__c</fullName>
        <label>Quantidade da frota</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registrados__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registrados (CLT)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remunera_o__c</fullName>
        <label>Remuneração</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rota_fixa_por_vendedor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rota fixa por vendedor ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sortimento_por_vendedor__c</fullName>
        <label>Sortimento por vendedor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mais de 1.500 Itens</fullName>
                </value>
                <value>
                    <fullName>Entre 800 e 1.500 Itens</fullName>
                </value>
                <value>
                    <fullName>No máximo 800 Itens</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tem_Area_de_vendas_prop_BalcLoja__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tem área de vendas própria?(Balcão/Loja)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_de_SKUs__c</fullName>
        <formula>N_skus_Emp_1__c + N_skus_Emp_2__c + N_skus_Emp_3__c + N_skus_Emp_4__c + N_skus_Emp_5__c + N_skus_Emp_6__c + N_skus_Emp_7__c + N_skus_Emp_8__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total de SKUs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendedor_e_Automatizado_Palm_ou_Note__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendedor é Automatizado (Palm ou Note)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vinhos_Distribui__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vinhos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vinhos_N_SKUs__c</fullName>
        <label>Vinhos - Nº SKUs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vinhos_Part_Fat_perc__c</fullName>
        <label>Vinhos - Partic.faturamento (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>exemplo_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>exemplo - checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>exemplo_numero__c</fullName>
        <label>exemplo - número</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>exemplo_percent__c</fullName>
        <label>exemplo - percent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>exemplo_texto__c</fullName>
        <label>exemplo - texto</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Dados complementares de distribuidor</label>
    <nameField>
        <displayFormat>Dados Distrib. # {00000}</displayFormat>
        <label>Código de dados complementares de distri</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dados complementares de distribuidores</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Nao_permite_maior_100_porc_Bacardi</fullName>
        <active>true</active>
        <errorConditionFormula>if( Bacardi_Part_Fat_perc__c &gt;1, true,false)</errorConditionFormula>
        <errorDisplayField>Bacardi_Part_Fat_perc__c</errorDisplayField>
        <errorMessage>O valor não pode ser maior que 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Nao_permite_maior_100_porc_Campari</fullName>
        <active>true</active>
        <errorConditionFormula>if( Campari_Part_Fat_perc__c &gt;1, true,false)</errorConditionFormula>
        <errorDisplayField>Campari_Part_Fat_perc__c</errorDisplayField>
        <errorMessage>O valor não pode ser maior que 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Nao_permite_maior_100_porc_Cervejas</fullName>
        <active>true</active>
        <errorConditionFormula>if( Cervejas_Part_Fat_perc__c &gt;1, true,false)</errorConditionFormula>
        <errorDisplayField>Cervejas_Part_Fat_perc__c</errorDisplayField>
        <errorMessage>O valor não pode ser maior que 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Nao_permite_maior_100_porc_Diageo</fullName>
        <active>true</active>
        <errorConditionFormula>if( Diageo_Part_Fat_perc__c&gt;1, true,false)</errorConditionFormula>
        <errorDisplayField>Diageo_Part_Fat_perc__c</errorDisplayField>
        <errorMessage>O valor não pode ser maior que 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Nao_permite_maior_100_porc_Energico</fullName>
        <active>true</active>
        <errorConditionFormula>if( Energ_Part_Fat_perc__c  &gt;1, true,false)</errorConditionFormula>
        <errorDisplayField>Energ_Part_Fat_perc__c</errorDisplayField>
        <errorMessage>O valor não pode ser maior que 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Nao_permite_maior_100_porc_Muller</fullName>
        <active>true</active>
        <errorConditionFormula>if( Muller_Part_Fat_perc__c &gt;1, true,false)</errorConditionFormula>
        <errorDisplayField>Muller_Part_Fat_perc__c</errorDisplayField>
        <errorMessage>O valor não pode ser maior que 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Nao_permite_maior_100_porc_Pernod</fullName>
        <active>true</active>
        <errorConditionFormula>if( Pernod_Part_Fat_perc__c  &gt;1, true,false)</errorConditionFormula>
        <errorDisplayField>Pernod_Part_Fat_perc__c</errorDisplayField>
        <errorMessage>O valor não pode ser maior que 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Nao_permite_maior_100_porc_outros</fullName>
        <active>true</active>
        <errorConditionFormula>if( Outros_Part_Fat_perc__c&gt;1, true,false)</errorConditionFormula>
        <errorDisplayField>Outros_Part_Fat_perc__c</errorDisplayField>
        <errorMessage>O valor não pode ser maior que 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Nao_permite_maior_100_porc_vinhos</fullName>
        <active>true</active>
        <errorConditionFormula>if( Vinhos_Part_Fat_perc__c &gt;1, true,false)</errorConditionFormula>
        <errorDisplayField>Vinhos_Part_Fat_perc__c</errorDisplayField>
        <errorMessage>O valor não pode ser maior que 100%</errorMessage>
    </validationRules>
</CustomObject>